fluxcd/infrastructure/configs/overlays/production/istio-policies/hyrule-castle/allow-harbor-core-to-harbor-registry.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-harbor-core-to-harbor-registry
spec:
  selector:
    matchLabels:
      app: harbor
      component: registry
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/hyrule-castle/sa/harbor-core
      to:
        - operation:
            ports: ["5000", "8080"]
